--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <div id="app"></div>
     <script src="https://unpkg.com/inferno/dist/inferno.min.js"></script>
     <script src="https://unpkg.com/inferno-hyperscript/dist/inferno-hyperscript.min.js"></script>
-    <script>
-    const h = Inferno.h;
-    </script>
+    <script>const h = Inferno.h;</script>
+    <script src="https://unpkg.com/inferno-create-element/dist/inferno-create-element.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
